# mlflow-project-template

./: .gitignore  .pre-commit-config.yaml  MLProject  README.md  conda_env.yaml  main.py  noxfile.py  pyproject.toml  requirements.dev.txt
docs/: README.md
notebooks/: example.ipynb
scripts/: generate_report.py
